# fuzzytrans

./: LICENSE  README.md  main.py  pyproject.toml
examples/: differential_equations.ipynb  lower_upper_functions_examples.ipynb
fuzzytrans/: __init__.py  core.py  transformations.py
