[project]
name = "fuzzytrans"
version = "0.1.0"
description = "Library for fuzzy logic transformations - implementation of triangular, Gaussian and Bell fuzzy functions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.6.0",
]

authors = [
    {name = "David", email = "davidadamczyk@icloud.com"}
]

keywords = ["fuzzy", "logic", "transformations", "triangular", "gaussian", "bell", "mathematics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/david/fuzzytrans"
Repository = "https://github.com/david/fuzzytrans"
Documentation = "https://github.com/david/fuzzytrans#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fuzzytrans"]

[tool.ruff]
line-length = 140
exclude = ["examples/*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "YTT", "S", "BLE", "B", "A", "C4", "DTZ", "EM", "EXE", "G", "INP", "PIE", "Q", "RET", "SLF", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["D203", "D212", "D213", "D214", "D215", "N802", "N803", "N806", "D100", "D103", "D104"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["fuzzytrans"]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.10.0",
    "isort>=5.12.0",
    "mypy>=1.6.0",
    "pytest>=7.4.0",
]
